force-app/main/default/objects/Line_Item__c/Line_Item__c.object-meta.xml
<CustomObject>
    <description>Details about each product that was purchased during transaction</description>
    <label>Line Item</label>
    <nameField>
        <label>Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>