force-app/main/default/objects/Line_Item__c/fields/Product_name_with_code__c.field-meta.xml
<CustomField>
    <fullName>Product_name_with_code__c</fullName>
    <formula>Product__r.Name &amp; &quot;(&quot; &amp; Product__r.Code__c &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product name with code</label>
    <type>Text</type>
</CustomField>