force-app/main/default/objects/Line_Item__c/fields/TestDebuging__c.field-meta.xml
<CustomField>
    <fullName>TestDebuging__c</fullName>
    <label>TestDebuging</label>
    <length>10</length>
    <type>Text</type>
</CustomField>