force-app/main/default/objects/Line_Item__c/validationRules/LineItemQuantity.validationRule-meta.xml
<ValidationRule>
    <fullName>LineItemQuantity</fullName>
    <active>true</active>
    <description>Line_Item__c.Quantity__c can not be less than 1</description>
    <errorConditionFormula>Quantity__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity can not be less than 1</errorMessage>
</ValidationRule>