force-app/main/default/objects/Line_Item__c/listViews/LineItemsListView.listView-meta.xml
<ListView>
    <fullName>LineItemsListView</fullName>
    <columns>NAME</columns>
    <columns>Quantity__c</columns>
    <columns>Amount__c</columns>
    <columns>Transaction__c</columns>
    <columns>Product_name_with_code__c</columns>
    <columns>Product__c</columns>
    <filterScope>Mine</filterScope>
    <label>LineItemsListView</label>
</ListView>